--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
   <groupId>com.codelerity</groupId>
   <artifactId>codelerity-core</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
     
   <name>Codelerity CORE</name>
@@ -41,17 +41,18 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <id>sonatype-central-c2</id>
+      <url>https://central.sonatype.com/repository/maven-snapshots</url>
     </snapshotRepository>
     <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>sonatype-central-c2</id>
+      <url>https://repo.maven.apache.org/maven2</url>
     </repository>
   </distributionManagement>
 
   <properties>
     <praxiscore.version>6.3.0</praxiscore.version>
+    <njord.version>0.8.0</njord.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
@@ -86,6 +87,13 @@
   </dependencies>
   
   <build>
+    <extensions>
+      <extension>
+        <groupId>eu.maveniverse.maven.njord</groupId>
+        <artifactId>extension3</artifactId>
+        <version>${njord.version}</version>
+      </extension>
+    </extensions>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -172,6 +180,11 @@
               <additionalOption>-Xdoclint:none</additionalOption>
             </additionalOptions>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>eu.maveniverse.maven.plugins</groupId>
+          <artifactId>njord</artifactId>
+          <version>${njord.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
