--- a/codelerity-core-bin/pom.xml
+++ b/codelerity-core-bin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.codelerity</groupId>
     <artifactId>codelerity-core</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-beta-1</version>
   </parent>
   <artifactId>codelerity-core-bin</artifactId>
   <packaging>jar</packaging>
