--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
   <groupId>com.codelerity</groupId>
   <artifactId>codelerity-core</artifactId>
-  <version>1.0-beta-1</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
     
   <name>Codelerity CORE</name>
